--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     <h1>Compiler Support for Near-Cache Computing in Kobold</h1>
   </div>
 
-  <p>TODO</p>
+<!--   <p>TODO</p> -->
 
-  <p>TODO</p>
+<!--   <p>TODO</p> -->
 
-  <h2>Documents</h2>
+<!--   <h2>Documents</h2> -->
 
-  <div class="pub">
+<!--   <div class="pub">
     <b>Title</b>.
     <a class="smallbutton" href="https://example.com">pdf</a>
     <br>
@@ -62,7 +62,7 @@
     Blah blah
     <br>
     Foo bar
-  </p>
+  </p> -->
 
 </div>
 
