--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
     <h1>Compiler Support for Near-Cache Computing in Kobold</h1>
   </div>
 
+  <div class="custom-subheading">
+    <a class="custom-link" href="files/15_745_project_proposal.pdf">Project proposal</a>
+ </div>
+
 <!--   <p>TODO</p> -->
 
 <!--   <p>TODO</p> -->
