--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   <div class="picture">
     <img width="100%" src="images/kobold.png">
+    <img width="100%" src="images/kobold2.png">
   </div>
 
   <div class="contact">
