--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
       <dt>Email</dt>
       <dd>
-        jbrana@<br>
-        colinmcd@
+        jbrana@cs.cmu.edu<br>
+        colinmcd@cs.cmu.edu
       </dd>
 
       <dt>Code</dt>
