--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
 
   <div class="custom-subheading">
     <a class="custom-link" href="files/15_745_project_proposal.pdf">Project proposal</a>
-    <a class="custom-link" href="files/15_745_project_report.pdf">Project final report</a>
+ </div>
+
+  <div class="custom-subheading">
+    <a class="custom-link" href="files/15_745_report.pdf">Project final report</a>
  </div>
 
 <!--   <p>TODO</p> -->
